Compatible with JDK 8