@@ -87,7 +87,7 @@ public class ConfigurationFactory {
                 if (paramStringValues.containsKey(configName)) {
                     String stringValue = paramStringValues.get(configName).get(0);
                     // As the arguments might be URL encoded, be sure it's decoded.
-                    stringValue = URLDecoder.decode(stringValue, StandardCharsets.UTF_8);
+                    stringValue = URLDecoder.decode(stringValue, "UTF-8");
                     FieldUtils.writeField(instance, field.getName(), toFieldValue(field, stringValue), true);
                     missingFieldNames.remove(configName);
                 } else {
